[gd_scene load_steps=2 format=2]

[ext_resource path="res://MAIN.gd" type="Script" id=1]

[node name="MAIN" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 521.0
margin_top = 126.0
margin_right = 662.0
margin_bottom = 192.0

[node name="Button" type="Button" parent="."]
margin_left = 78.0
margin_top = 131.0
margin_right = 165.0
margin_bottom = 162.0
text = "lista preenchida"

[node name="Button3" type="Button" parent="."]
margin_left = 525.0
margin_top = 221.0
margin_right = 666.0
margin_bottom = 252.0
text = "adcione um numero"

[node name="Button4" type="Button" parent="."]
margin_left = 82.0
margin_top = 323.0
margin_right = 223.0
margin_bottom = 354.0
text = "texto"

[node name="Label" type="Label" parent="."]
margin_left = 76.0
margin_top = 194.0
margin_right = 319.0
margin_bottom = 250.0

[node name="Label3" type="Label" parent="."]
margin_left = 524.0
margin_top = 286.0
margin_right = 767.0
margin_bottom = 342.0

[node name="Label4" type="Label" parent="."]
margin_left = 81.0
margin_top = 380.0
margin_right = 324.0
margin_bottom = 436.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
